All references to engines have been removed; For example, any rake tasks which applied to engines now apply to all plugins. The default Rails rake tasks for plugins are overridden where necessary.
Layouts can now be shared via plugins - inspiration gratefully taken from PluginAWeek's plugin_routing :)


-----
1.1.4

Fixed creation of multipart emails (Ticket #190)
Added a temporary fix to the code-mixing issue. In your engine's test/test_helper.rb, please add the following lines:

  # Ensure that the code mixing and view loading from the application is disabled
  Engines.disable_app_views_loading = true
  Engines.disable_app_code_mixing = true

is will prevent code mixing for controllers and helpers, and loading views from the application. One thing to remember is to load any controllers/helpers using 'require_or_load' in your tests, to ensure that the engine behaviour is respected (Ticket #135)
Added tasks to easily test engines individually (Ticket #120)
Fixture extensions will now fail with an exception if the corresponding class cannot be loaded (Ticket #138)
Patch for new routing/controller loading in Rails 1.1.6. The routing code is now replaced with the contents of config.controller_paths, along with controller paths from any started engines (Ticket #196)
Rails' Configuration instance is now stored, and available from all engines and plugins.


-----
1.1.3

Fixed README to show 'models' rather than 'model' class (Ticket #167)
Fixed dependency loading to work with Rails 1.1.4 (Ticket #180)


-----
1.1.2

Added better fix to version checking (Ticket #130, jdell@gbdev.com).
Fixed generated init_engine.rb so that VERSION module doesn't cause probems (Ticket #131, japgolly@gmail.com)
Fixed error with Rails 1.0 when trying to ignore the engine_schema_info table (Ticket #132, snowblink@gmail.com)
Re-added old style rake tasks (Ticket #133)